# ov2slam

./: .gitignore  CMakeLists.txt  build_thirdparty.sh
include/: logger.hpp  multi_view_geometry.hpp  optimizer.hpp  ov2slam.hpp
launch/: ov2slam.launch
src/: map_manager.cpp  multi_view_geometry.cpp  ov2slam.cpp  ov2slam_node.cpp  visual_front_end.cpp
